--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "cytoscape": "^3.2.15",
     "d3": "^5.6.0",
+    "echarts": "^4.1.0",
     "element-ui": "^2.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
